--- a/just-bench.cabal
+++ b/just-bench.cabal
@@ -8,15 +8,15 @@ author:              DevWurm
 maintainer:          devwurm@devwurm.net
 bug-reports:         https://github.com/DevWurm/just-bench/issues
 copyright:           (c) 2016 DevWurm
-category:            Benchmarking 
+category:            Benchmarking
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Benchmark.Time
-  -- other-modules:       
-  -- other-extensions:    
+  exposed-modules:     JustBench.Measure, JustBench.Measure.Time
+  -- other-modules:
+  -- other-extensions:
   build-depends:       base >=4.8 && <4.9, criterion >=1.1 && <1.2, abstract-par >=0.3 && <0.4
   hs-source-dirs:      src
   default-language:    Haskell2010
